--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -24,6 +24,12 @@
       "@assets/*": ["./src/assets/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/app/(authorized)/index.tsx"
+  ],
   "exclude": ["node_modules"]
 }
